# py-bugger

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: test.yaml
developer_resources/: sample_attribute_node.py  sample_for_node.py  sample_import_node.py  simple_indent_nodes.py
docs/: index.md  requirements.txt
docs/contributing/: index.md  roadmap.md
docs/maintaining/: index.md
docs/quick_start/: index.md
docs/usage/: index.md
src/: cli.py  py_bugger.py
src/py_bugger/: buggers.py  cli.py  cli_messages.py  py_bugger.py
src/py_bugger/cli/: cli.py
src/py_bugger/utils/: bug_utils.py  buggers.py  cst_utils.py  file_utils.py
tests/e2e_tests/: conftest.py  test_basic_behavior.py  test_cli_flags.py  test_non_bugmaking_behavior.py  test_nonetype_attribute_error.py  test_project_setup.py
tests/e2e_tests/reference_files/: bare.txt  help.txt  no_exception_type.txt
tests/sample_code/sample_scripts/: all_indentation_blocks.py  dog.py  dog_no_trailing_newline.py  identical_attributes.py  many_dogs.py  name_picker.py  object_function_call.py  simple_function_attribute.py  simple_indent.py  system_info_script.py  ten_imports.py  zero_imports.py
tests/unit_tests/: test_bug_utils.py  test_file_utils.py
