[project]
name = "py-bugger"
description = "Practice debugging, by intentionally introducing bugs into an existing codebase."
version = "0.1.0"
requires-python = ">=3.9"

dependencies = []

[project.optional-dependencies]
dev = [
    "black>=24.1.0",
    "build>=1.2.1",
    "pytest>=8.3.0",
    "twine>=5.1.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
